Fix footer on mobile, and mobile general styles

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -158,7 +158,7 @@ dashboard-content {
   overflow: hidden;
   margin: 0;
   padding: 0;
-  width: 88px;
+  width: 68px;
   //height: 96px;
   //text-indent: -9999px;
   cursor: pointer;
@@ -169,6 +169,8 @@ dashboard-content {
 
   i {
     font-size: 24px;
+    position: relative;
+    right: -5px;
   }
 }
 
