--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -33,6 +33,9 @@
       border-top: 1px solid $white;
 
       ul {
+        display: flex;
+        flex-direction: column;
+
         li {
           padding-right: $padding-base;
 
@@ -47,6 +50,17 @@
           }
         }
       }
+
+      //  Breakpoints
+      @include breakpoint (fromMedium) {
+
+        ul {
+          display: flex;
+          flex-direction: row;
+        }
+
+      }
+
     }
 
   }
