--- a/src/app/components/primarypush/primarypush.component.scss
+++ b/src/app/components/primarypush/primarypush.component.scss
@@ -5,16 +5,16 @@
   //background: $ui-grey-2;
   //background-image: url("/assets/img/primary-push-student.jpg");
   background-image: url("https://knowclive.github.io/dashboard/assets/img/primary-push-student.jpg");
-  background-size: inherit;
+  background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: 55% center;
   overflow: hidden;
   height: 400px;
   color: $white;
 
   &__inner {
-    width: 620px;
-    padding: 0 $padding-base 0 $padding-large;
+    width: 100%;
+    padding: $padding-large $padding-base 0 $padding-base;
     position: relative;
     top: 50px;
 
@@ -22,4 +22,20 @@
       color: $white;
     }
   }
+
+  //  Breakpoints
+  @include breakpoint (fromMedium) {
+    background-size: inherit;
+    background-position: center center;
+
+    &__inner {
+      width: 620px;
+      padding: 0 $padding-base 0 $padding-large;
+    }
+  }
 }
+
+
+//background-size: cover;
+//background-position: 100% top;
+//background-attachment: fixed;
